# picoPEAKO

./: .gitignore  README.md  create.py  pyproject.toml  requirements.txt  setup.py  train.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  flake8.yml
picopeako/: __init__.py  area_overlap_metric.py  peak_detection_quality_metric.py  peako.py  training_data.py  utils.py
tests/: test_core.py  test_peako.py
