[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "picopeako"
version = "0.1.0"
description = "A Python library for radar data processing and analysis using scipy, numpy, and xarray."
authors = ["Tobias Riesen <tobias.riesen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.7"
numpy = "^1.21"
xarray = "^0.18"
matplotlib = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
